[package]
name = "craking_coding_interview"
version = "0.1.0"
authors = ["Sandip Dey <sandip.dey1988@yahoo.com>"]
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
rayon = "1.11.0"
rand = "0.10.0"
assert_approx_eq = "1.1.0"
paste = "1.0.15"
pretty_assertions = "1.4.1"
threadpool = "1.8.1"
bit-vec = "0.8.0"
num = "0.4.3"
strum = "0.27.2"
strum_macros = "0.27.2"
chrono = "0.4.43"
reqwest = { version = "0.13.2", features = ["json"] }
clap = "4.5.58"
error-chain = "0.12.4"
colored = "3.1.1"
log = "0.4.29"
libc = "0.2.169"
futures = "0.3.31"
arrayvec = "0.7.6"
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"
async-std = "1.13.2"
tokio = { version = "1.49.0", features = ["full"] }
pin-project = "1.1.10"
tokio-stream = "0.1.18"

[dependencies.uuid]
version = "1.20.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[bin]]
name = "atm"
path = "./atm/main.rs"

[[bin]]
name = "blackjack"
path = "./blackjack/main.rs"

[[bin]]
name = "blackjack-design"
path = "./blackjack/blackjack.rs"

[[bin]]
name = "car_rental"
path = "./car_rental/main.rs"

[[bin]]
name = "chat"
path = "./chat/main.rs"

[[bin]]
name = "parkinglot"
path = "./parkinglot/parkinglot.rs"

[[bin]]
name = "chess"
path = "./chess/chess.rs"

[[bin]]
name = "chess_game"
path = "./chess/main.rs"

[[bin]]
name = "lru"
path = "./lru/main.rs"

[[bin]]
name = "movie_ticket_booking"
path = "./movie_ticket_booking/main.rs"

[[bin]]
name = "library_management"
path = "./library_management/main.rs"

[[bin]]
name = "restaurant_management"
path = "./restaurant_management/main.rs"

[[bin]]
name = "stock_exchange"
path = "./stock_exchange/main.rs"

[[bin]]
name = "crawler"
path = "./crawler/spider.rs"

[[bin]]
name = "blockchain"
path = "./async/task.rs"


[[bin]]
name = "stream"
path = "./async/stream.rs"
